Fix problem on mozilla with backface visibility causing issue with see through inputs on flashcard view (backside)

--- a/src/styles/flipcard.scss
+++ b/src/styles/flipcard.scss
@@ -8,6 +8,7 @@
     width: 100%;
     transition: transform 0.6s ease-out;
     transform-style: preserve-3d;
+    background-color: inherit;
 }
 
 .flip-card-flipped .flip-card-inner {
@@ -20,6 +21,7 @@
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
+    background-color: inherit;
 }
 
 .flip-card-back {
