--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -47,6 +47,7 @@
     flex-direction: column;
     row-gap: 1.5em;
     align-items: flex-end;
+    background-color: inherit;
 }
 
 .form-body {
